[package]
name = "usnrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "usnrs-cli"
path = "src/bin/usnrs-cli.rs"
required-features = ["usnrs-cli"]

[lib]
name = "usnrs"
path = "src/lib.rs"

[features]
usnrs-cli = ["clap"]

[dependencies]
binrw = "0.12.0"
bitflags = "2.4.0"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"], optional = true}
mft = "0.6.1"
