[package]
name = "usnrs"
version = "0.2.1"
edition = "2021"

authors = ["Airbus CERT <cert@airbus.com>"]
description = "A tool and library to parse USN Journal files"
readme = "README.md"
repository = "https://github.com/airbus-cert/usnrs"
license = "Apache-2.0"
categories = ["command-line-utilities", "parser-implementations"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "usnrs-cli"
path = "src/bin/usnrs-cli.rs"
required-features = ["usnrs-cli"]

[lib]
name = "usnrs"
path = "src/lib.rs"

[features]
usnrs-cli = ["clap"]

[dependencies]
binrw = "0.12.0"
bitflags = "2.4.0"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"], optional = true}
mft = "0.6.1"
